[project]
name = "pybsky"
version = "0.0.15"
authors = [
  { name="Mohammadreza softrebel", email="sh.mohammad66@yahoo.com" },
    { name="Mahdi Ovan", email="mahdi.ovan@yahoo.com" },
]
description ='Python Client for bsky social media'
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/softrebel/pybsky"
"Bug Tracker" = "https://github.com/softrebel/pybsky/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = []

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402","F403","F401"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["pybsky"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false
